styles/Contact.module.css
.container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    margin-top: 200px;
}

.contactme,
.submitScreen {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;

    padding: 80px 40px;
    width: 75vw;
    margin: 0 auto;

    border: 1px solid rgb(var(--black-rgb));
    border-radius: var(--radius-large);
}

.submitScreen {
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.submitScreen>.successCheck {
    position: relative; /* to make position absolute work for pseudo element `before` */
    background-color: rgb(var(--white-rgb));
    border-radius: 50%;
    width: 75px;
    height: 75px;
    margin-bottom: 75px;
}

.submitScreen>.submitReply {
    color: rgb(var(--black-rgb));
    font-size: 24px;
    font-weight: 500;
    text-align: center;
}

.successCheck>img {
    width: 100%;
    height: 100%;
}

.successCheck::before {
    content: "";
    z-index: -1;
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background-color: rgb(var(--black-rgb));
    animation: pulse 5s ease-out infinite 1s;
}

@keyframes pulse {
    0% {
        opacity: 1;
        transform: scale(1);
    }

    10% {
        opacity: 0;
        transform: scale(2);
    }

    20%, 100% {
        opacity: 0;
        transform: scale(1);
    }
}

.heading {
    font-size: 62px;
    line-height: 88px;
    font-weight: 500;
    width: 50%;
}

.form,
.userdetails,
.details {
    display: flex;
    flex-grow: 1;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
}

.form {
    padding: 0 30px;
}

.userdetails {
    flex-grow: 1;
    width: 100%;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

.details {
    align-items: flex-start;
    justify-content: center;
    padding: 0 5px;
}

.details:first-of-type {
    margin-right: 30px;
}

.label {
    display: block;
    color: rgb(var(--grey-rgb));
    font-size: 12px;
    line-height: 20px;
    font-weight: 500;
    margin-bottom: 5px;
}

.textarea,
.input {
    width: 100%;

    color: rgb(var(--black-rgb));
    font-size: 16px;
    font-weight: 400;

    padding: 15px;

    outline: none;
    border-radius: var(--radius);
    border: 1px solid rgb(var(--off-white-rgb));
    background-color: rgb(var(--off-white-rgb));
}

.input.input_honey {
    margin-top: 10px;
    display: none;
}

.textarea:focus,
.input:focus {
    border: 1px solid rgb(var(--black-rgb));
}

.textarea::placeholder,
.input::placeholder {
    color: rgb(var(--grey-rgb));
}

.textarea {
    resize: vertical;
    height: 150px;
}

.textwrapper {
    margin-top: 20px;
    padding: 0 5px;
    width: 100%;
    font-weight: 400;
}

.submit {
    margin-top: 20px;
    padding: 12px 25px;

    border: 1px solid rgb(var(--black-rgb));
    border-radius: var(--radius);

    color: rgb(var(--white-rgb));
    font-weight: 500;
    background-color: rgb(var(--black-rgb));
    transition: transform 0.2s ease-out;
}

.submit:hover {
    cursor: pointer;
    transform: scale(1.1, 1.1);
}

.submit:disabled {
    color: rgb(var(--dark-grey-rgb));
    background-color: rgb(var(--grey-rgb));
    border: 1px solid rgb(var(--grey-rgb));
}

.submit:disabled:hover {
    cursor: not-allowed;
    transform: none;
}

.captchaWrapper {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    margin-top: 20px;
    width: 100%;
    font-weight: 400;
}

.captchaWrapper img {
    margin-bottom: 5px;
}

.captchaWrapper .inputGrp {
    width: 350px;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: flex-start;
    align-items: center;
}

.inputGrp .input {
    width: 300px;
}

.inputGrp .reloadCaptcha {
    width: 25px;
    height: 25px;
    margin-left: 10px;
    background: none;
    border: none;
}

.inputGrp .reloadCaptcha:disabled {
    cursor: not-allowed;
    background: none;
    border: none;
}

.inputGrp .reloadCaptcha:disabled svg {
    fill: rgb(var(--grey-rgb));
    stroke: rgb(var(--grey-rgb));
}

.inputGrp .reloadCaptcha svg {
    fill: rgb(var(--black-rgb));
    stroke: rgb(var(--black-rgb));
}

.inputGrp .reloadCaptcha:hover {
    cursor: pointer;
    animation: refreshing 1s linear; /* defining this here will replay the animation on each hover otherwise animation would never play after playing once */
    animation-iteration-count: 1;
}

.inputGrp .reloadCaptcha.loading {
    animation: refreshing 1s linear; /* making another class like this wont interfere with hover animation */
    animation-iteration-count: infinite;
}

@keyframes refreshing {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

@media only screen and (max-width: 1500px) {
    .heading {
        font-size: 50px;
    }
}

@media only screen and (max-width: 1300px) {
    .heading {
        font-size: 40px;
    }
}

@media only screen and (max-width: 1024px) {
    .container {
        margin-top: 150px;
        padding: 0 5vw;
    }

    .contactme, .submitScreen {
        flex-direction: column;
        width: 100%;
        padding: 40px;
    }

    .heading {
        font-size: 36px;
        width: unset;
        line-height: unset;
    }

    .form {
        width: 100%;
        padding: 0;
    }
}

@media only screen and (max-width: 768px) {
    .container {
        margin-top: 120px;
    }

    .contactme {
        padding: 0;
        border: none;
    }

    .submitScreen {
        padding: 40px;
    }

    .userdetails {
        flex-direction: column;
        justify-content: center;
        width: 100%;
    }

    .details {
        width: 100%;
        margin-top: 20px;
    }

    .details:first-of-type {
        margin-right: 0;
    }
}

